--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "mongoose": "^8.0.3",
         "morgan": "^1.10.0",
         "multer": "^2.0.2",
+        "node-cron": "^4.2.1",
         "redis": "^4.6.10",
         "sharp": "^0.34.3",
         "swagger-jsdoc": "^6.2.8",
